# ILAL

./: .gitignore  .gitmodules  LICENSE  README.md  _RocqProject  dune-project  rocq-ilal.opam
theories/: #language.v#  AL.v  IL.v  dune  examples.v  language.v  state.v  tactics.v
theories/AL/: AL.v  language.v
theories/IL/: IL.v  examples.v  language.v
